reticle size adjustments

--- a/3DSS for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_rifles.ltx
+++ b/3DSS for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_rifles.ltx
@@ -758,9 +758,9 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.001183, 0.000556, -0.008708
 		
 ![wpn_aug_merc_specter]
-	3ds_reticle_size = 7.2
+	3ds_reticle_size = 4.5
 	3ds_shadow_project = 2
-	3ds_ffp_min_zoom = 46	
+	3ds_ffp_min_zoom = 70	
 	3ds_type = 5
 	ms_count = 2
 	ms_colors = scope_black, scope_red	
@@ -779,7 +779,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_alt_rot_16x9      = 0.007299, 0.00053, 0.001
 		
 ![wpn_aug_merc_leupold]
-	3ds_reticle_size = 4.5
+	3ds_reticle_size = 4.35
 	3ds_shadow_project = 3.6
 	3ds_ffp_min_zoom = 32
 	magnification = 8
@@ -797,8 +797,8 @@ use_alt_aim_hud                   = false
         aim_hud_offset_alt_rot_16x9      = 0, 0, 0.76
 		
 ![wpn_aug_merc_susat]
-	3ds_reticle_size = 3.4
-	3ds_shadow_project = 4.5
+	3ds_reticle_size = 3.7
+	3ds_shadow_project = 2.35
 	magnification = 4	
         scope_zoom_factor                = 30
         scope_texture                    =
@@ -813,9 +813,9 @@ use_alt_aim_hud                   = false
         aim_hud_offset_rot_16x9          = 0.003178, -0.003451, 0.001
 		
 ![wpn_aug_merc_marchf]
-	3ds_reticle_size = 8
+	3ds_reticle_size = 4.9
 	3ds_shadow_project = 3.1
-	3ds_ffp_min_zoom = 8
+	3ds_ffp_min_zoom = 16
 	3ds_type = 5
 	ms_count = 2
 	ms_colors = scope_black, scope_red	
@@ -836,10 +836,12 @@ use_alt_aim_hud                   = false
 1icon_layer			    = acog
 1icon_layer_x			= 80
 1icon_layer_y			= -14
-	3ds_reticle_size = 8
-	3ds_shadow_project = 2.15
+
+	3ds_reticle_size = 4.1
+	3ds_shadow_project = 2.2
 	3ds_type = 3
 	magnification = 2.8	
+	
         scope_zoom_factor                = 42.86
 		scope_texture                    =	
 use_alt_aim_hud                   = false		
@@ -863,8 +865,8 @@ zoom_rotate_time		                           = 0.25
 hud					                               = wpn_aug_merc_triji_hud
 use_alt_aim_hud                   = true		
 
-	3ds_reticle_size = 8
-	3ds_shadow_project = 2.15
+	3ds_reticle_size = 4.1
+	3ds_shadow_project = 2.2
 	3ds_type = 3
 	magnification = 2.8	
 
@@ -894,13 +896,13 @@ scope_dynamic_zoom                                 = on
 zoom_rotate_time		                           = 0.25
 use_alt_aim_hud                   = true	
 	
-	3ds_reticle_size = 7.2
+	3ds_reticle_size = 4.5
 	3ds_shadow_project = 2
-	3ds_ffp_min_zoom = 46	
+	3ds_ffp_min_zoom = 70	
 	3ds_type = 5
 	ms_count = 2
 	ms_colors = scope_black, scope_red	
-	magnification = 4		
+	magnification = 4			
 	
 [wpn_aug_merc_spec_alt_hud]:wpn_aug_merc_hud
 item_visual                              = anomaly_weapons\wpn_aug_thales\wpn_aug_thales_specalt_hud.ogf
@@ -929,7 +931,7 @@ zoom_rotate_time		                           = 0.25
 use_alt_aim_hud                   = true		
 scope_dynamic_zoom                                 = on
 
-	3ds_reticle_size = 4.5
+	3ds_reticle_size = 4.35
 	3ds_shadow_project = 3.6
 	3ds_ffp_min_zoom = 32
 	magnification = 8
@@ -979,10 +981,12 @@ item_visual                              = anomaly_weapons\wpn_aug_thales\wpn_au
         aim_hud_offset_rot_16x9          = 0.004269, -0.003344, -0.008708	
 ;==============================================================================
 ![wpn_fal_aus_kit_aus_tri]
-	3ds_reticle_size = 8
-	3ds_shadow_project = 2.15
+
+	3ds_reticle_size = 4.1
+	3ds_shadow_project = 2.2
 	3ds_type = 3
 	magnification = 2.8	
+	
         scope_zoom_factor                = 42.86
 		scope_texture                    =
 lewd_lens_hide_enabled       = true
@@ -1000,13 +1004,15 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_alt_rot_16x9      = -0.021031, -0.017624, 0.78
 		
 ![wpn_fal_aus_kit_sa5x_spec]
-	3ds_reticle_size = 7.2
+
+	3ds_reticle_size = 4.5
 	3ds_shadow_project = 2
-	3ds_ffp_min_zoom = 46	
+	3ds_ffp_min_zoom = 70	
 	3ds_type = 5
 	ms_count = 2
 	ms_colors = scope_black, scope_red	
 	magnification = 4	
+	
         scope_zoom_factor                = 30
 		scope_texture                    =
 		scope_dynamic_zoom               = on
@@ -1026,10 +1032,12 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_alt_rot_16x9      = -0.021031, -0.017624, 0.78
 		
 ![wpn_fal_aus_kit_fal_leup]
-	3ds_reticle_size = 4.5
+
+	3ds_reticle_size = 4.35
 	3ds_shadow_project = 3.6
 	3ds_ffp_min_zoom = 32
 	magnification = 8
+	
         scope_zoom_factor                = 15
 		scope_texture                    =
 		scope_dynamic_zoom               = on
@@ -1208,10 +1216,12 @@ lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false	
 
 ![wpn_fn2000_nimble_acog]
-	3ds_reticle_size = 8
-	3ds_shadow_project = 2.15
+
+	3ds_reticle_size = 4.1
+	3ds_shadow_project = 2.2
 	3ds_type = 3
 	magnification = 2.8	
+	
         scope_zoom_factor                = 42.86
 		scope_texture                    =
 		scope_status                     = 1		
@@ -1222,13 +1232,15 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.039467, 0.016926, 0
 		
 ![wpn_fn2000_nimble_specter]
-	3ds_reticle_size = 7.2
+
+	3ds_reticle_size = 4.5
 	3ds_shadow_project = 2
-	3ds_ffp_min_zoom = 46	
+	3ds_ffp_min_zoom = 70	
 	3ds_type = 5
 	ms_count = 2
 	ms_colors = scope_black, scope_red	
-	magnification = 4		
+	magnification = 4
+	
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_fn2000_nimble_specter_hud]
@@ -1242,10 +1254,12 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.033601, 0.016917, 0
 		
 ![wpn_fn2000_nimble_leupold]
-	3ds_reticle_size = 4.5
+
+	3ds_reticle_size = 4.35
 	3ds_shadow_project = 3.6
 	3ds_ffp_min_zoom = 32
 	magnification = 8
+	
         scope_zoom_factor                = 15
 		scope_texture                    =
 ![wpn_fn2000_nimble_leupold_hud]
@@ -1255,12 +1269,14 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.033828, 0.017072, 0
  
 ![wpn_fn2000_nimble_pn23]
-	3ds_reticle_size = 9	
-	3ds_shadow_project = 3.7
-	3ds_ffp_min_zoom = 42	
+
+	3ds_reticle_size = 4.38	
+	3ds_shadow_project = 1.98
+	3ds_ffp_min_zoom = 28	
 	3ds_type = 1
 	ms_count = 2
-	magnification = 3.8	
+	magnification = 6
+	
         scope_zoom_factor                = 30
         scope_texture                    =
 		nv_scope_status 				 = 0
@@ -1272,10 +1288,15 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.033167, 0.016879, 0
 		
 ![wpn_fn2000_nimble_marchf]
-	3ds_reticle_size = 8
+
+	3ds_reticle_size = 4.9
 	3ds_shadow_project = 3.1
-	3ds_ffp_min_zoom = 8
+	3ds_ffp_min_zoom = 16
+	3ds_type = 5
+	ms_count = 2
+	ms_colors = scope_black, scope_red	
 	magnification = 24
+	
         scope_zoom_factor                = 5
 		min_scope_zoom_factor			 = 40
         scope_texture                    =
@@ -1284,6 +1305,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_pos_16x9          = -0.073284, 0.005195, -0.099278
         aim_hud_offset_rot               = 0.033373, 0.0172, 0
         aim_hud_offset_rot_16x9          = 0.033373, 0.0172, 0
+		
 ;==============================================================================
 ![wpn_g36v_rwap]
 	3ds_reticle_size = 4.5
@@ -1300,6 +1322,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_pos_16x9          = 0.02421, -0.013467, -0.056548
         aim_hud_offset_rot               = 0.01176, 0.001707, 0.00387
         aim_hud_offset_rot_16x9          = 0.01176, 0.001707, 0.00387
+		
 ;==============================================================================	
 ![wpn_g36nimble_rwap]	
 >scopes 			                         = triji, mark8_rmr, spec_alt, pn23
@@ -1606,12 +1629,14 @@ lewd_lens_hide_bone          = scope1
 lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false		
 ![wpn_groza_nimble_pn23]
-	3ds_reticle_size = 9	
-	3ds_shadow_project = 3.7
-	3ds_ffp_min_zoom = 42	
+
+	3ds_reticle_size = 4.38	
+	3ds_shadow_project = 1.98
+	3ds_ffp_min_zoom = 28	
 	3ds_type = 1
 	ms_count = 2
-	magnification = 3.8	
+	magnification = 6	
+	
         scope_zoom_factor                = 30
         scope_texture                    =
 		nv_scope_status 				 = 0
@@ -1623,13 +1648,15 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.02132, 0.0139, 0
 		
 ![wpn_groza_nimble_specter]
-	3ds_reticle_size = 7.2
+
+	3ds_reticle_size = 4.5
 	3ds_shadow_project = 2
-	3ds_ffp_min_zoom = 46	
+	3ds_ffp_min_zoom = 70	
 	3ds_type = 5
 	ms_count = 2
 	ms_colors = scope_black, scope_red	
-	magnification = 4
+	magnification = 4	
+	
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_groza_nimble_specter_hud]
@@ -1639,10 +1666,12 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.02194, 0.013878, 0
 		
 ![wpn_groza_nimble_acog]
-	3ds_reticle_size = 8
-	3ds_shadow_project = 4
+
+	3ds_reticle_size = 4.1
+	3ds_shadow_project = 2.2
 	3ds_type = 3
 	magnification = 2.8	
+	
         scope_zoom_factor                = 42.86
 		scope_texture                    =
 ![wpn_groza_nimble_acog_hud]
@@ -1662,13 +1691,15 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.02223, 0.014006, 0
 		
 ![wpn_groza_nimble_marchf]
-	3ds_reticle_size = 8
+
+	3ds_reticle_size = 4.9
 	3ds_shadow_project = 3.1
-	3ds_ffp_min_zoom = 8
+	3ds_ffp_min_zoom = 16
 	3ds_type = 5
 	ms_count = 2
 	ms_colors = scope_black, scope_red	
 	magnification = 24
+	
         scope_zoom_factor                = 5
 		min_scope_zoom_factor			 = 40
         scope_texture                    =
@@ -6433,12 +6464,14 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.01431, 0.057342, -0.015
 		
 ![wpn_dtmdr_black_sup]
+
 	3ds_reticle_size = 4.2
 	3ds_shadow_project = 2.5
 	3ds_type = 4
 	ms_count = 2
 	ms_colors = scope_black, scope_red	
 	magnification = 6
+	
 inv_grid_width     = 5
 inv_grid_height    = 2
 inv_grid_x         = 15
@@ -6562,12 +6595,14 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.01431, 0.057342, -0.015
 
 ![wpn_dtmdr_sup]
+
 	3ds_reticle_size = 4.2
 	3ds_shadow_project = 2.5
 	3ds_type = 4
 	ms_count = 2
 	ms_colors = scope_black, scope_red	
 	magnification = 6
+	
 inv_grid_width     = 5
 inv_grid_height    = 2
 inv_grid_x         = 0
@@ -6677,9 +6712,11 @@ lewd_lens_hide_delays        = 0.1,0
 lewd_lens_hide_aim_mode      = true, false, false
 
 ![wpn_rpk74_1p29]
+
 	3ds_reticle_size = 4.6
 	3ds_shadow_project = 3
-	magnification = 4	
+	magnification = 4
+	
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_rpk74_1p29_hud]
@@ -6689,12 +6726,14 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.004707, -0.070518, 0
 		
 ![wpn_rpk74_ps01]
+
 	3ds_reticle_size = 4.7
 	3ds_shadow_project = 4.1
 	3ds_type = 4
 	ms_count = 2
 	ms_colors = scope_black, scope_red
-	magnification = 4	
+	magnification = 4
+	
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_rpk_sk1_hud]
