--- a/3DSS for GAMMA/gamedata/configs/mod_system_3ds_colors.ltx
+++ b/3DSS for GAMMA/gamedata/configs/mod_system_3ds_colors.ltx
@@ -1,4 +1,10 @@
-![markswitch_colors]
+@[markswitch_colors]
 	scope_black = 0, 0, 0, 1
 	scope_red = 1, 0.2, 0.2, 1
-	scope_green = 0, 0.9, 0.25, 1
+	scope_red_dim = 0.4, 0.05, 0.05, 1
+	scope_green = 0, 0.9, 0.25, 1	
+
+@[s3ds_colors]
+	lens_old_yellow = 0.95, 0.91, 0.83
+	lens_russian_blue = 0.93, 0.96, 1
+	lens_contrast_yellow = 1.1, 1, 0.2
