--- a/3DSS for GAMMA/gamedata/configs/mod_system_3ds_gamma_scopes.ltx
+++ b/3DSS for GAMMA/gamedata/configs/mod_system_3ds_gamma_scopes.ltx
@@ -1,315 +1,360 @@
 ; Fields:
-; 3ds_reticle_size - reticle size multiplier
-; 3ds_shadow_project - distance from scope lens to projected shadow, in other words, eye relief
-; 3ds_ffp_min_zoom - for FFP scopes, minimal magnification FOV
-; 3ds_type - custom type, see description
-; ms_count - number of different marks (should be supported by custom type)
-; ms_colors - list of colors for illumination
-;
-; Custom types:
-; 3ds_type = 1 - NV scope (nightvision shader is applied to main image)
-; 3ds_type = 2 - 1P59 Giperon scope (red channel at first focal plane, green channel at second focal plane, blue channel rotated by zoom), has LED illumination
-; 3ds_type = 3 - ACOG, sun illuminated scope (red channel is regular black reticle, green channel is illuminated area, blue channel is gray text)
-; 3ds_type = 4 - LED illuminated scope
-; 3ds_type = 5 - Masked LED illuminated scope (red channel is regular black reticle, green channel is illuminated area)
-; 3ds_type = 6 - PKA ssetting to get rid of awful pip. The scope is too narrow to turn it into a proper red dot
-;
-; Use this ltx to modify scope parameters and universal magnification. Magnification can also be set in weapon section for guns with integrated scopes.
+; s3ds_reticle_size - reticle size multiplier (default 4)
+; s3ds_eye_relief - distance from scope lens to projected shadow, or eye relief (default 4)
+; s3ds_exit_pupil - exit pupil diameter relative to ocular lens diameter, or parallax shadow diameter (default 0.3)
+; s3ds_ffp - enable first focal plane feature, reticle sizes up while zooming. Can be 0 or 1 (default 0)
 
+; s3ds_min_zoom_fov - FOV at minimal magnification. Needed for correct work of FFP option, Giperon, Spectre, thermal scopes (default 37.5)
+; s3ds_max_zoom_fov - FOV at maximum magnification. Needed for Giperon and Spectre (default 11.25)
+; s3ds_min_zoom_1x - at minimal FOV magnification, disable image scale up inside scope. Needed for 1x optic sights and 1-Nx LPVO scopes
+
+; s3ds_image_type - background image processor (default 0)
+;   0 - none
+;   1 - NV scope (with ms_count = 2 becomes switchable)
+;   2 - thermal scope (with ms_count = 2 becomes switchable)
+; s3ds_reticle_type - reticle processor (default 0)
+;   0 - none
+;   1 - LED illuminated reticle
+;   2 - Masked LED illuminated reticle (red channel is regular black reticle, green channel is illuminated area)
+;   3 - ACOG, sun illuminated reticle (red channel is regular black reticle, green channel is illuminated area, blue channel is gray text)
+;   4 - ELCAN Specter, LED illuminated reticle with zoom switch (red channel is regular black reticle, green channel is illuminated area 1, blue channel is illuminated area 2).
+;         Use with ms_count = 3 and ms_colors = scope_black, scope_red_dim, scope_red
+;   5 - 1P59 Giperon scope (red channel at first focal plane, green channel at second focal plane, blue channel rotated by zoom), has LED illumination
+;   6 - Screen (used for classic thermal scopes, disables parallax shadow and circle sight bound)
+; s3ds_dirt_intensity - dirtness. 0 is clear vision, 1 is severe contamination (default 0)
+; s3ds_chroma_power - chromatic abberation intensity. Represents scope overall quality. 0 is no chroma, 0.02 is barely noticeable chroma, 0.05 is trash-tier scope (default 0.02)
+
+; s3ds_lens_color - image color affection by lens. Represents lens quality and condition. Also may be used for contrast lens cups.
+
+; ms_colors - list of colors for illumination
+; ms_count - count of different reticles
+
+; Ingame testing (console commands, put actual parameters)
+; s3ds_param_1 s3ds_reticle_size, s3ds_eye_relief, s3ds_exit_pupil, s3ds_ffp
+; s3ds_param_2 s3ds_min_zoom_fov, s3ds_max_zoom_fov, s3ds_min_zoom_1x, 0
+; s3ds_param_3 s3ds_image_type, s3ds_reticle_type, s3ds_dirt_intensity, s3ds_chroma_power
+; s3ds_param_4 s3ds_lens_color, 0
+
+; Sights
 ;----------------------------------DOVETAIL/EAST SCOPES---------------------------------
 ![pka]
-	3ds_reticle_size = 2
-	3ds_shadow_project = 4.9
-	3ds_type = 6
-	ms_count = 2
-	ms_colors = scope_red, scope_green	
-	magnification = 1
+	s3ds_reticle_size 	= 2
+	s3ds_eye_relief 	= 4.9
+	s3ds_exit_pupil 	= 5
+	s3ds_min_zoom_1x 	= 1
+	s3ds_reticle_type 	= 1
+	ms_count 			= 2
+	ms_colors 			= scope_red, scope_green	
+	magnification 		= 1
 	
 ![pgo7gs]
-	3ds_reticle_size = 10
-	3ds_shadow_project = 2.5
-	magnification = 4
+	s3ds_reticle_size 	= 10
+	s3ds_eye_relief 	= 2.5
+	magnification 		= 4
 	
 ![1p78gs] 
-	3ds_reticle_size = 4.7
-	3ds_shadow_project = 2.05
-	magnification = 2.8	
+	s3ds_reticle_size 	= 4.7
+	s3ds_eye_relief 	= 2.05
+	s3ds_exit_pupil		= 0.32	
+	magnification 		= 2.8	
 	
 ![kashtan_rmr]	
-	3ds_reticle_size = 4.7
-	3ds_shadow_project = 2.05
-	magnification = 2.8	
+	s3ds_reticle_size 	= 4.7
+	s3ds_eye_relief 	= 2.05
+	s3ds_exit_pupil		= 0.32	
+	magnification 		= 2.8
 	
 ![1pn93n2_1gs] --Dynamic
-	3ds_reticle_size = 5.2	
-	3ds_shadow_project = 2.1
-	3ds_type = 1
-	ms_count = 2
-	magnification = 3.7	
+	s3ds_reticle_size 	= 3.5	
+	s3ds_eye_relief 	= 2.6
+	s3ds_exit_pupil		= 0.34	
+	s3ds_image_type 	= 1
+	ms_count 			= 2
+	magnification 		= 3.7	
 
 ![1p29]
-	3ds_reticle_size = 4.6
-	3ds_shadow_project = 2
-	magnification = 4	
+	s3ds_reticle_size 	= 3.7
+	s3ds_eye_relief 	= 2.7
+	s3ds_exit_pupil		= 0.25
+	magnification 		= 4	
 	
 ![usp1]
-	3ds_reticle_size = 4.6
-	3ds_shadow_project = 2
-	magnification = 4		
+	s3ds_reticle_size 	= 3.7
+	s3ds_eye_relief 	= 2.7
+	s3ds_exit_pupil		= 0.25
+	magnification 		= 4			
 	
 ![ps01]
-	3ds_reticle_size = 4.7
-	3ds_shadow_project = 4.1
-	3ds_type = 4
-	ms_count = 2
-	ms_colors = scope_black, scope_red
-	magnification = 4	
+	s3ds_reticle_size 	= 3.9
+	s3ds_eye_relief 	= 4
+	s3ds_exit_pupil		= 0.34	
+	s3ds_reticle_type 	= 1	
+	ms_count 			= 2
+	ms_colors 			= scope_black, scope_red
+	magnification 		= 4	
 	
 ![pso1m21] --PS02
-	3ds_reticle_size = 4
-	3ds_shadow_project = 2.25
-	3ds_type = 4
-	ms_count = 2
-	ms_colors = scope_black, scope_red
-	magnification = 4	
+	s3ds_reticle_size 	= 3.4
+	s3ds_eye_relief 	= 2.95
+	s3ds_reticle_type 	= 1
+	ms_count 			= 2
+	ms_colors 			= scope_black, scope_red
+	magnification 		= 4	
 	
 ![pso2]
-	3ds_reticle_size = 4
-	3ds_shadow_project = 2.25
-	3ds_type = 4
-	ms_count = 2
-	ms_colors = scope_black, scope_red
-	magnification = 4	
+	s3ds_reticle_size 	= 3.4
+	s3ds_eye_relief 	= 2.95
+	s3ds_reticle_type 	= 1
+	ms_count 			= 2
+	ms_colors 			= scope_black, scope_red
+	magnification 		= 4		
 
 ![pritseldob] --PS02 RMR
-	3ds_reticle_size = 4
-	3ds_shadow_project = 2.25
-	3ds_type = 4
-	ms_count = 2
-	ms_colors = scope_black, scope_red
-	magnification = 4		
+	s3ds_reticle_size 	= 3.4
+	s3ds_eye_relief 	= 2.95
+	s3ds_reticle_type 	= 1
+	ms_count 			= 2
+	ms_colors 			= scope_black, scope_red
+	magnification 		= 4		
 	
 ![1pn93] --Dynamic
- 	3ds_reticle_size = 5.2	
-	3ds_shadow_project = 2.1
-	3ds_type = 1
-	ms_count = 2
-	magnification = 4	
+ 	s3ds_reticle_size 	= 3.3	
+	s3ds_eye_relief 	= 3
+	s3ds_exit_pupil		= 0.28
+	s3ds_image_type 	= 1
+	ms_count 			= 2
+	magnification 		= 4	
 	
 ![1p59] --Dynamic
-	3ds_reticle_size = 5.4
-	3ds_shadow_project = 2.8
-	3ds_ffp_min_zoom = 32
-	3ds_type = 2
-	ms_count = 2
-	ms_colors = scope_black, scope_red
-	magnification = 10
+	s3ds_reticle_size 	= 5.4
+	s3ds_eye_relief 	= 2.8
+	s3ds_ffp			= 1
+	s3ds_reticle_type 	= 5
+	s3ds_min_zoom_fov 	= 35.1
+	s3ds_max_zoom_fov 	= 9.05
+	ms_count 			= 2
+	ms_colors 			= scope_black, scope_red
+	magnification 		= 10
 
 ![1p69]
-	3ds_reticle_size = 5.4
-	3ds_shadow_project = 2.8
-	3ds_ffp_min_zoom = 32
-	3ds_type = 2
-	ms_count = 2
-	ms_colors = scope_black, scope_red
-	magnification = 10
+	s3ds_reticle_size 	= 5.4
+	s3ds_eye_relief 	= 2.8
+	3ds_ffp_min_zoom 	= 32
+	s3ds_reticle_type 	= 5
+	s3ds_min_zoom_fov 	= 35.1
+	s3ds_max_zoom_fov 	= 9.05	
+	ms_count 			= 2
+	ms_colors 			= scope_black, scope_red
+	magnification 		= 10
 		
 ![wpn_addon_scope_pu]
-	3ds_reticle_size = 2.5
-	3ds_shadow_project = 4
-	magnification = 3.5
+	s3ds_reticle_size 	= 2.5
+	s3ds_eye_relief 	= 4
+	magnification 		= 3.5
 	
 ![wpn_addon_scope_zf4]
-	3ds_reticle_size = 10
-	3ds_shadow_project = 5.65
-	magnification = 4	
+	s3ds_reticle_size 	= 10
+	s3ds_eye_relief 	= 5.65
+	magnification 		= 4	
 
 ![wpn_addon_scope_g43]	
-	3ds_reticle_size = 3
-	3ds_shadow_project = 3.7
-	magnification = 4
+	s3ds_reticle_size 	= 3
+	s3ds_eye_relief 	= 3.7
+	magnification 		= 4
 	
 ![wpn_addon_scope_po4x34]
-	3ds_reticle_size = 7
-	3ds_shadow_project = 3.7
-	magnification = 4		
+	s3ds_reticle_size 	= 7
+	s3ds_eye_relief 	= 3.7
+	magnification 		= 4		
 ;----------------------------------PICATINNY/WEST SCOPES---------------------------------
 ![monstrum]
-	3ds_reticle_size = 7
-	3ds_shadow_project = 3.7	
-	magnification = 2
+	s3ds_reticle_size 	= 7
+	s3ds_eye_relief 	= 3.7	
+	magnification 		= 2
 	
 ![acog]
-	3ds_reticle_size = 4.1
-	3ds_shadow_project = 2.2
-	3ds_type = 3
-	magnification = 2.8	
+	s3ds_reticle_size 	= 4.1
+	s3ds_eye_relief 	= 2.2
+	s3ds_reticle_type 	= 3
+	magnification 		= 2.8	
 	
 ![triji]
-	3ds_reticle_size = 4.1
-	3ds_shadow_project = 2.2
-	3ds_type = 3
-	magnification = 2.8	
+	s3ds_reticle_size 	= 4.1
+	s3ds_eye_relief 	= 2.2
+	s3ds_reticle_type 	= 3
+	magnification 		= 2.8	
 
 ![trihawk] 
-	3ds_reticle_size = 8
-	3ds_shadow_project = 3.1	
-	magnification = 3
+	s3ds_reticle_size 	= 8
+	s3ds_eye_relief 	= 3.1	
+	magnification 		= 3
 	
 ![gee36]
-	3ds_reticle_size = 4.5
-	3ds_shadow_project = 3.8	
-	magnification = 3
+	s3ds_reticle_size 	= 4.5
+	s3ds_eye_relief 	= 3.8	
+	magnification 		= 3
 	
 ![side]
-	3ds_reticle_size = 2.5
-	3ds_shadow_project = 3.85	
-	magnification = 3.5
+	s3ds_reticle_size 	= 2.5
+	s3ds_eye_relief 	= 3.85	
+	magnification 		= 3.5
 	
 ![susat]
-	3ds_reticle_size = 3.7
-	3ds_shadow_project = 2.35
-	magnification = 4	
+	s3ds_reticle_size 	= 3.7
+	s3ds_eye_relief 	= 2.35
+	magnification 		= 4	
 
 ![susatov]
-	3ds_reticle_size = 3.7
-	3ds_shadow_project = 2.35
-	magnification = 4	
+	s3ds_reticle_size 	= 3.7
+	s3ds_eye_relief 	= 2.35
+	magnification 		= 4	
 	
 ![bravo4]
-	3ds_reticle_size = 16
-	3ds_shadow_project = 3.9
-	magnification = 4	
+	s3ds_reticle_size 	= 16
+	s3ds_eye_relief 	= 3.9
+	magnification 		= 4	
 
 ![hamr]
-	3ds_reticle_size = 12
-	3ds_shadow_project = 2.1
-	magnification = 4
+	s3ds_reticle_size 	= 12
+	s3ds_eye_relief 	= 2.1
+	magnification 		= 4
 	
 ![specter] --Dynamic
-	3ds_reticle_size = 4.5
-	3ds_shadow_project = 2
-	3ds_ffp_min_zoom = 70	
-	3ds_type = 5
-	ms_count = 2
-	ms_colors = scope_black, scope_red	
-	magnification = 4	
+	s3ds_reticle_size 	= 4.5
+	s3ds_eye_relief 	= 2
+	s3ds_ffp			= 1
+	s3ds_min_zoom_fov 	= 56
+	s3ds_max_zoom_fov 	= 20
+	s3ds_reticle_type 	= 4
+	ms_count 			= 3
+	ms_colors			= scope_black, scope_red_dim, scope_red
+	magnification 		= 4	
 	
 ![spec_alt] --Dynamic
-	3ds_reticle_size = 4.5
-	3ds_shadow_project = 2
-	3ds_ffp_min_zoom = 70	
-	3ds_type = 5
-	ms_count = 2
-	ms_colors = scope_black, scope_red	
-	magnification = 4	
+	s3ds_reticle_size 	= 4.5
+	s3ds_eye_relief 	= 2
+	s3ds_ffp			= 1
+	s3ds_min_zoom_fov 	= 56
+	s3ds_max_zoom_fov 	= 20
+	s3ds_reticle_type 	= 4
+	ms_count 			= 3
+	ms_colors			= scope_black, scope_red_dim, scope_red	
+	magnification 		= 4		
 
 ![tac30]
-	3ds_reticle_size = 6.7
-	3ds_shadow_project = 2.22
-	magnification = 4	
+	s3ds_reticle_size 	= 6.7
+	s3ds_eye_relief 	= 2.22
+	magnification 		= 4	
 
 ![p4x32] --Not Adjusted                                  		
-	3ds_reticle_size = 7
-	3ds_shadow_project = 3.7
-	magnification = 4	
+	s3ds_reticle_size 	= 7
+	s3ds_eye_relief 	= 3.7
+	magnification 		= 4	
 	
 ![po4x34] --Not Adjusted 
-	3ds_reticle_size = 7
-	3ds_shadow_project = 3.7
-	magnification = 4	
+	s3ds_reticle_size 	= 7
+	s3ds_eye_relief 	= 3.7
+	magnification 		= 4	
 	
 ![uh1_magd]
-	3ds_reticle_size = 6.5
-	3ds_shadow_project = 2.4
-	magnification = 6
+	s3ds_reticle_size 	= 6.5
+	s3ds_eye_relief 	= 2.4
+	magnification 		= 6
 
 ![e0t2_magd]	
-	3ds_reticle_size = 6.5
-	3ds_shadow_project = 2.4
-	magnification = 6
+	s3ds_reticle_size 	= 6.5
+	s3ds_eye_relief 	= 2.4
+	magnification 		= 6
 
 ![devo]
-	3ds_reticle_size = 4.2
-	3ds_shadow_project = 2.5
-	3ds_type = 4
-	ms_count = 2
-	ms_colors = scope_black, scope_red	
-	magnification = 6
+	s3ds_reticle_size 	= 4.2
+	s3ds_eye_relief 	= 2.5
+	s3ds_reticle_type 	= 1
+	ms_count 			= 2
+	ms_colors 			= scope_black, scope_red	
+	magnification 		= 6
 	
 ![pn23] --Dynamic   
-	3ds_reticle_size = 4.38	
-	3ds_shadow_project = 1.98
-	3ds_ffp_min_zoom = 28	
-	3ds_type = 1
-	ms_count = 2
-	magnification = 6	
+	s3ds_reticle_size 	= 4.38	
+	s3ds_eye_relief 	= 1.98
+	s3ds_ffp			= 1	
+	s3ds_min_zoom_fov 	= 35
+	s3ds_max_zoom_fov 	= 28	
+	s3ds_image_type 	= 1
+	ms_count 			= 2
+	magnification 		= 6	
 	
 ![razorhd] --Dynamic
-	3ds_reticle_size = 9
-	3ds_shadow_project = 3.9
-	magnification = 6
+	s3ds_reticle_size 	= 9
+	s3ds_eye_relief 	= 3.9
+	magnification 		= 6
 	
 ![ps320] --Dynamic
-	3ds_reticle_size = 9
-	3ds_shadow_project = 3.9
-	3ds_ffp_min_zoom = 40	
-	3ds_type = 4
-	ms_count = 2
-	ms_colors = scope_black, scope_red
-	magnification = 6
+	s3ds_reticle_size 	= 9
+	s3ds_eye_relief 	= 3.9
+	s3ds_ffp			= 1	
+	s3ds_min_zoom_fov 	= 35
+	s3ds_max_zoom_fov 	= 28	
+	s3ds_reticle_type 	= 1
+	ms_count			= 2
+	ms_colors 			= scope_black, scope_red
+	magnification 		= 6
 	
 ![leupold] --Dynamic
-	3ds_reticle_size = 4.35
-	3ds_shadow_project = 3.6
-	3ds_ffp_min_zoom = 32
-	magnification = 8
+	s3ds_reticle_size 	= 4.35
+	s3ds_eye_relief 	= 3.6
+	s3ds_ffp			= 1	
+	s3ds_min_zoom_fov 	= 35
+	s3ds_max_zoom_fov 	= 28
+	magnification 		= 8
 	
 ![mark8_rmr] --Dynamic
-	3ds_reticle_size = 4.35
-	3ds_shadow_project = 3.6
-	3ds_ffp_min_zoom = 32
-	magnification = 8	
+	s3ds_reticle_size 	= 4.35
+	s3ds_eye_relief 	= 3.6
+	s3ds_ffp			= 1	
+	s3ds_min_zoom_fov 	= 35
+	s3ds_max_zoom_fov 	= 28
+	magnification 		= 8
 	
 ![march_f_shorty] --Dynamic
-	3ds_reticle_size = 10
-	3ds_shadow_project = 4.1
-	3ds_ffp_min_zoom = 21
-	magnification = 8
+	s3ds_reticle_size 	= 10
+	s3ds_eye_relief 	= 4.1
+	magnification 		= 8
 
 ![march_f_shorty_alt] --Dynamic
-	3ds_reticle_size = 10
-	3ds_shadow_project = 4.1
-	3ds_ffp_min_zoom = 21
-	magnification = 8
+	s3ds_reticle_size 	= 10
+	s3ds_eye_relief 	= 4.1
+	magnification 		= 8
 
 ![ado]	--Dynamic
-	3ds_reticle_size = 3.7
-	3ds_shadow_project = 4.8	
-	magnification = 9
+	s3ds_reticle_size 	= 3.7
+	s3ds_eye_relief 	= 4.8	
+	magnification 		= 9
 	
 ![cortex] --Dynamic
-	3ds_reticle_size = 5.25
-	3ds_shadow_project = 2.9
-	3ds_ffp_min_zoom = 25	
-	magnification = 10	
+	s3ds_reticle_size 	= 5.25
+	s3ds_eye_relief 	= 2.9
+	3ds_ffp_min_zoom 	= 25	
+	magnification 		= 10	
 		
 ![gauss_sight] --Dynamic
-	3ds_reticle_size = 3.5
-	3ds_shadow_project = 6.2
-	3ds_ffp_min_zoom = 18
-	3ds_type = 1
-	ms_count = 2	
+	s3ds_reticle_size 	= 3.5
+	s3ds_eye_relief 	= 5.3
+	s3ds_image_type = 2
+	s3ds_reticle_type = 6
+	ms_count = 2
 	magnification = 10
 		
 ![marchf] --Dynamic
-	3ds_reticle_size = 4.9
-	3ds_shadow_project = 3.1
-	3ds_ffp_min_zoom = 16
-	3ds_type = 5
-	ms_count = 2
-	ms_colors = scope_black, scope_red	
-	magnification = 24
+	s3ds_reticle_size 	= 4.9
+	s3ds_eye_relief 	= 3.1
+	s3ds_ffp			= 1	
+	s3ds_min_zoom_fov 	= 18
+	s3ds_max_zoom_fov 	= 10
+	s3ds_reticle_type 	= 2
+	ms_count 			= 2
+	ms_colors 			= scope_black, scope_red	
+	magnification 		= 24
  
 	
 ![sup]
