--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_3ds_gamma_scopes.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_3ds_gamma_scopes.ltx
@@ -37,7 +37,7 @@
 
 ; Sights
 ;----------------------------------DOVETAIL/EAST SCOPES---------------------------------
-![pka]
+![pka]	--1x, Red dot
 	s3ds_reticle_size 	= 2
 	s3ds_eye_relief 	= 4.9
 	s3ds_exit_pupil 	= 5
@@ -47,24 +47,19 @@
 	ms_colors 			= scope_red, scope_green	
 	magnification 		= 1
 	
-![pgo7gs]
-	s3ds_reticle_size 	= 10
-	s3ds_eye_relief 	= 2.5
-	magnification 		= 4
-	
-![1p78gs] 
+![1p78gs] 	--2.8x
 	s3ds_reticle_size 	= 3.5
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.5	
 	magnification 		= 2.8	
 	
-![kashtan_rmr]	
+![kashtan_rmr]	--1p78gs, 2.8x
 	s3ds_reticle_size 	= 3.5
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.5	
 	magnification 		= 2.8
 	
-![1pn93n2_1gs] --Dynamic
+![1pn93n2_1gs] --Dynamic, NVG, 3.7x
 	s3ds_reticle_size 	= 3.5	
 	s3ds_eye_relief 	= 2.6
 	s3ds_exit_pupil		= 0.33	
@@ -72,19 +67,19 @@
 	ms_count 			= 2
 	magnification 		= 3.7	
 
-![1p29]
+![1p29]	--4x
 	s3ds_reticle_size 	= 3.7
 	s3ds_eye_relief 	= 2.7
 	s3ds_exit_pupil		= 0.24
 	magnification 		= 4	
 	
-![usp1] --1P29
+![usp1] --1P29, 4x
 	s3ds_reticle_size 	= 3.7
 	s3ds_eye_relief 	= 2.7
 	s3ds_exit_pupil		= 0.24
 	magnification 		= 4			
 	
-![ps01]
+![ps01]	--4x
 	s3ds_reticle_size 	= 3.9
 	s3ds_eye_relief 	= 4
 	s3ds_exit_pupil		= 0.34	
@@ -93,7 +88,7 @@
 	ms_colors 			= scope_black, scope_red
 	magnification 		= 4	
 		
-![pso2]
+![pso2]	--4x
 	s3ds_reticle_size 	= 3.4
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.5	
@@ -102,7 +97,7 @@
 	ms_colors 			= scope_black, scope_red
 	magnification 		= 4
 	
-![pso1m21] --PS02
+![pso1m21] --PS02, 4x
 	s3ds_reticle_size 	= 3.4
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.5	
@@ -111,7 +106,7 @@
 	ms_colors 			= scope_black, scope_red
 	magnification 		= 4
 	
-![pritseldob] --PS02 RMR
+![pritseldob] --PS02, 4x
 	s3ds_reticle_size 	= 3.4
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.5	
@@ -120,15 +115,20 @@
 	ms_colors 			= scope_black, scope_red
 	magnification 		= 4	
 	
-![1pn93] --Dynamic
+![1pn93] --Dynamic, NVG, 4x
  	s3ds_reticle_size 	= 3.3	
 	s3ds_eye_relief 	= 3
 	s3ds_exit_pupil		= 0.28
 	s3ds_image_type 	= 1
 	ms_count 			= 2
 	magnification 		= 4	
+
+![pgo7gs] --4x, RPG scope
+	s3ds_reticle_size 	= 10
+	s3ds_eye_relief 	= 2.5
+	magnification 		= 4
 	
-![1p59] --Dynamic
+![1p59] --Dynamic, 3x-10x
 	s3ds_reticle_size 	= 4.2
 	s3ds_eye_relief 	= 5
 	s3ds_exit_pupil		= 0.75	
@@ -140,7 +140,7 @@
 	ms_colors 			= scope_black, scope_red
 	magnification 		= 10
 
-![1p69]
+![1p69] --1p59, 3x-10x, picatinny, UNUSED
 	s3ds_reticle_size 	= 4.2
 	s3ds_eye_relief 	= 5
 	s3ds_exit_pupil		= 0.75	
@@ -152,42 +152,42 @@
 	ms_colors 			= scope_black, scope_red
 	magnification 		= 10
 		
-![wpn_addon_scope_pu]
+![wpn_addon_scope_pu] 	--3.5x
 	s3ds_reticle_size 	= 2.5
 	s3ds_eye_relief 	= 4
 	magnification 		= 3.5
 	
-![wpn_addon_scope_zf4]
+![wpn_addon_scope_zf4]	--4x
 	s3ds_reticle_size 	= 3
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.63	
 	magnification 		= 4	
 
-![wpn_addon_scope_g43]	
+![wpn_addon_scope_g43]	--4x
 	s3ds_reticle_size 	= 3
 	s3ds_eye_relief 	= 3.7
 	magnification 		= 4
 	
-![wpn_addon_scope_po4x34]
+![wpn_addon_scope_po4x34]	--Groza, 4x
 	s3ds_reticle_size 	= 4.2
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.35	
 	magnification 		= 4		
 ;----------------------------------PICATINNY/WEST SCOPES---------------------------------
-![t12]
+![t12]	--Thermal, 1x
 	s3ds_reticle_size 	= 2.2
 	s3ds_image_type 	= 2
 	s3ds_reticle_type 	= 6
 	s3ds_min_zoom_1x	= 1	
 	magnification 		= 1
 	
-![monstrum]
+![monstrum]	--2x
 	s3ds_reticle_size 	= 3
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.8	
 	magnification 		= 2
 	
-![acog]
+![acog]	--2.8x
 	s3ds_reticle_size 	= 3.9
 	s3ds_eye_relief 	= 1.5
 	s3ds_exit_pupil		= 0.55	
@@ -195,7 +195,7 @@
 	s3ds_reticle_type 	= 3
 	magnification 		= 2.8	
 	
-![triji]
+![triji]	--acog, 2.8x
 	s3ds_reticle_size 	= 3.9
 	s3ds_eye_relief 	= 1.5
 	s3ds_exit_pupil		= 0.55	
@@ -203,48 +203,48 @@
 	s3ds_reticle_type 	= 3
 	magnification 		= 2.8		
 
-![trihawk] 
+![trihawk]	--3x
 	s3ds_reticle_size 	= 3.2
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.66
 	s3ds_chroma_power	= 0.028
 	magnification 		= 3
 	
-![gee36]
+![gee36]	--3x
 	s3ds_reticle_size 	= 3.2
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.65	
 	magnification 		= 3
 	
-![side]
+![side]	--3.5x
 	s3ds_reticle_size 	= 2.5
 	s3ds_eye_relief 	= 3.85	
 	magnification 		= 3.5
 	
-![susat]
+![susat]	--4x
 	s3ds_reticle_size 	= 3.7
 	s3ds_eye_relief 	= 2.35
 	magnification 		= 4	
 
-![susatov]
+![susatov]	--4x, l85 sight
 	s3ds_reticle_size 	= 3.7
 	s3ds_eye_relief 	= 2.35
 	magnification 		= 4	
 	
-![bravo4]
+![bravo4]	--4x
 	s3ds_reticle_size 	= 4.1
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.35	
 	magnification 		= 4	
 
-![hamr]
+![hamr]	--4x
 	s3ds_reticle_size 	= 4.3
 	s3ds_eye_relief 	= 1.9
 	s3ds_exit_pupil		= 0.35
 	s3ds_chroma_power	= 0.035
 	magnification 		= 4
 	
-![specter] --Dynamic
+![specter] --Dynamic, Rotating Scope, 1x/4x
 	s3ds_reticle_size 	= 4.5
 	s3ds_eye_relief 	= 2
 	s3ds_ffp			= 1
@@ -256,7 +256,7 @@
 	ms_colors			= scope_black, scope_red_dim, scope_red
 	magnification 		= 4	
 	
-![spec_alt] --Dynamic
+![spec_alt] --Dynamic, specter, Rotating Scope, 1x/4x
 	s3ds_reticle_size 	= 4.5
 	s3ds_eye_relief 	= 2
 	s3ds_ffp			= 1
@@ -268,7 +268,7 @@
 	ms_colors			= scope_black, scope_red_dim, scope_red
 	magnification 		= 4		
 
-![tac30]
+![tac30]	--Dynamic, 1x-4x
 	s3ds_reticle_size 	= 4
 	s3ds_eye_relief 	= 2
 	s3ds_chroma_power	= 0.04	
@@ -280,25 +280,28 @@
 	s3ds_exit_pupil		= 0.35	
 	magnification 		= 4	
 	
-![po4x34] --picatinny
+![po4x34] --Picatinny, 4x
 	s3ds_reticle_size 	= 4.2
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.35	
 	magnification 		= 4	
 	
-![uh1_magd]
+![uh1_magd] --6x
 	s3ds_reticle_size 	= 3.9
 	s3ds_eye_relief 	= 2.4
 	s3ds_chroma_power	= 0		
 	magnification 		= 6
 
-![e0t2_magd]	
+![e0t2_magd]	--6x	
 	s3ds_reticle_size 	= 3.9
 	s3ds_eye_relief 	= 2.4
-	s3ds_chroma_power	= 0		
+	s3ds_chroma_power	= 0
+	s3ds_reticle_type 	= 1
+	ms_count 			= 2
+	ms_colors 			= scope_red, scope_green		
 	magnification 		= 6
 
-![devo]
+![devo]	--1x/6x
 	s3ds_reticle_size 	= 4.6
 	s3ds_eye_relief 	= 2
 	s3ds_exit_pupil		= 0.525
@@ -308,7 +311,7 @@
 	ms_colors 			= scope_black, scope_red	
 	magnification 		= 6
 	
-![pn23] --Dynamic   
+![pn23] --Dynamic, NVG, 1x-6x
 	s3ds_reticle_size 	= 4.38	
 	s3ds_eye_relief 	= 1.98
 	s3ds_ffp			= 1	
@@ -319,13 +322,13 @@
 	ms_count 			= 2
 	magnification 		= 6	
 	
-![razorhd] --Dynamic
+![razorhd] --Dynamic, 1x-6x
 	s3ds_reticle_size 	= 4.1
 	s3ds_eye_relief 	= 2.3
 	s3ds_chroma_power	= 0		
 	magnification 		= 6
 	
-![ps320] --Dynamic
+![ps320] --Dynamic, Rotating Scope, 1x/6x
 	s3ds_reticle_size 	= 4.1
 	s3ds_eye_relief 	= 2.2
 	s3ds_ffp			= 1	
@@ -341,7 +344,7 @@
 ;----------------------Sniper Scopes---------------------------	
 ;--------------------------------------------------------------
 
-![leupold] --Dynamic
+![leupold] --Dynamic, 1x-8x
 	s3ds_reticle_size 	= 4.35
 	s3ds_eye_relief 	= 4
 	s3ds_exit_pupil		= 0.6	
@@ -350,7 +353,7 @@
 	s3ds_max_zoom_fov 	= 28
 	magnification 		= 8
 	
-![mark8_rmr] --Dynamic
+![mark8_rmr] --Dynamic, leupold, 1x-8x
 	s3ds_reticle_size 	= 4.35
 	s3ds_eye_relief 	= 4
 	s3ds_exit_pupil		= 0.6	
@@ -359,27 +362,27 @@
 	s3ds_max_zoom_fov 	= 28
 	magnification 		= 8
 	
-![march_f_shorty] --Dynamic
+![march_f_shorty] --Dynamic, 1x-8x
 	s3ds_reticle_size 	= 3.9
 	s3ds_eye_relief 	= 4.5
 	s3ds_exit_pupil		= 0.5	
 	s3ds_chroma_power	= 0		
 	magnification 		= 8
 
-![march_f_shorty_alt] --Dynamic
+![march_f_shorty_alt] --Dynamic, 1x-8x
 	s3ds_reticle_size 	= 3.9
 	s3ds_eye_relief 	= 4.5
 	s3ds_exit_pupil		= 0.5	
 	s3ds_chroma_power	= 0		
 	magnification 		= 8
 
-![ado]	--Dynamic
+![ado]	--Dynamic, 3x-9x
 	s3ds_reticle_size 	= 3.9
 	s3ds_eye_relief 	= 4.8	
 	s3ds_exit_pupil		= 0.55		
 	magnification 		= 9
 			
-![gauss_sight] --Dynamic
+![gauss_sight] --Dynamic, Thermal, 1x-10x
 	s3ds_reticle_size 	= 5
 	s3ds_image_type 	= 2
 	s3ds_reticle_type 	= 6
@@ -395,7 +398,7 @@
 	s3ds_max_zoom_fov 	= 10	
 	magnification 		= 12
 	
-![marchf] --Dynamic
+![marchf] --Dynamic, 3x-24x
 	s3ds_reticle_size 	= 4.9
 	s3ds_eye_relief 	= 3.1
 	s3ds_ffp			= 1	
