scope config updates

--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_3ds_gamma_scopes.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_3ds_gamma_scopes.ltx
@@ -232,6 +232,16 @@
 	s3ds_reticle_size 	= 2.5
 	s3ds_eye_relief 	= 3.85	
 	magnification 		= 3.5
+
+![vulcan] --NVG, 3.5x
+	s3ds_reticle_size 	= 3	
+	s3ds_eye_relief 	= 2
+	s3ds_exit_pupil		= 0.6	
+	s3ds_chroma_power	= 0.05	
+	s3ds_image_type 	= 1
+	s3ds_reticle_type	= 7
+	ms_count 			= 2
+	magnification 		= 3.5	
 	
 ![susat]	--4x
 	s3ds_reticle_size 	= 3.7
