--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_snipers.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_snipers.ltx
@@ -445,6 +445,8 @@ item_visual                              = anomaly_weapons\wpn_win1873\wpn_win18
         aim_hud_offset_alt_rot_16x9          = 0.015971, 0.008551, 0.00782		
 ;==============================================================================
 ![wpn_k98]
+scopes                                   = wpn_addon_scope_zf4, mauser_kit
+
 lewd_lens_hide_enabled       = true		
 lewd_lens_hide_bone          = lens
 lewd_lens_hide_delays        = 0.1,0
