--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_weapon_addons_athi.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_weapon_addons_athi.ltx
@@ -3,11 +3,12 @@ devo                                                = scope
 side												= scope
 gee36												= scope
 pn23f												= scope
+vulcan												= scope
 
 ;--------------------------------------------------------------------------------------
 [devo]:addon
 visual				                                = dynamics\weapons\wpn_addon_world_models\wpn_case_weapon_small_world.ogf
-cost                		                        = 34950
+cost                		                        = 44950
 inv_name        		                            = st_addon_scope_devo
 inv_name_short  		                            = st_addon_scope_devo
 description    			                            = st_addon_scope_devo_descr
@@ -25,7 +26,7 @@ cost                		                        = 4950
 inv_name        		                            = st_addon_scope_side
 inv_name_short  		                            = st_addon_scope_side
 description    			                            = st_addon_scope_side_descr
-inv_weight        		                            = 0.370
+inv_weight        		                            = 0.350
 icons_texture                                       = ui\ui_icon_athi_scopes
 inv_grid_width     = 2
 inv_grid_height    = 1
@@ -39,7 +40,7 @@ cost                		                        = 5230
 inv_name        		                            = st_addon_scope_gee36
 inv_name_short  		                            = st_addon_scope_gee36
 description    			                            = st_addon_scope_gee36_descr
-inv_weight        		                            = 0.270
+inv_weight        		                            = 0.650
 icons_texture                                       = ui\ui_icon_athi_scopes
 inv_grid_width     = 2
 inv_grid_height    = 1
@@ -53,7 +54,21 @@ cost                		                        = 5230
 inv_name        		                            = st_addon_scope_gee36
 inv_name_short  		                            = st_addon_scope_gee36
 description    			                            = st_addon_scope_gee36_descr
-inv_weight        		                            = 0.270
+inv_weight        		                            = 0.40
+icons_texture                                       = ui\ui_icon_bas
+inv_grid_width     = 2
+inv_grid_height    = 1
+inv_grid_x         = 83
+inv_grid_y         = 5
+repair_type                                         = scope	
+;--------------------------------------------------------------------------------------
+[vulcan]:addon
+visual				                                = dynamics\weapons\wpn_addon_world_models\wpn_case_weapon_small_world.ogf
+cost                		                        = 30250
+inv_name        		                            = st_addon_scope_vulcan
+inv_name_short  		                            = st_addon_scope_vulcan
+description    			                            = st_addon_scope_vulcan_descr
+inv_weight        		                            = 0.4
 icons_texture                                       = ui\ui_icon_bas
 inv_grid_width     = 2
 inv_grid_height    = 1
