--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_weapon_addons_athi.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_weapon_addons_athi.ltx
@@ -63,7 +63,7 @@ inv_grid_y         = 5
 repair_type                                         = scope	
 ;--------------------------------------------------------------------------------------
 [vulcan]:addon
-visual				                                = dynamics\weapons\wpn_addon_world_models\wpn_case_weapon_small_world.ogf
+visual				                                = dynamics\weapons\wpn_addon_world_models\wpn_scope_vulcan.ogf
 cost                		                        = 30250
 inv_name        		                            = st_addon_scope_vulcan
 inv_name_short  		                            = st_addon_scope_vulcan
